Bug 141675 - FILEOPEN: Incorrect position of shape
Summary: FILEOPEN: Incorrect position of shape
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2021-04-13 10:22 UTC by Xisco Faulí
Modified: 2021-04-19 13:49 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Comparison LibreOffice 7.2 master and MSO 2010 (92.48 KB, image/png)
2021-04-13 10:22 UTC, Xisco Faulí
Details
Testdocument with group (18.72 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2021-04-13 12:54 UTC, Regina Henschel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2021-04-13 10:22:20 UTC
Created attachment 171158 [details]
Comparison LibreOffice 7.2 master and  MSO 2010

Steps to reproduce:
1. Open attachment 165256 [details] from bug 78484

-> Both shapes are shifted to the left. See comparison image

Reproduced in

Version: 7.2.0.0.alpha0+ / LibreOffice Community
Build ID: 4eac7a11e5d39ca6c783f65f1ca2df009b9a37e4
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2021-04-13 10:23:58 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=44711d9eb53eb6247ebdb9293a3eb5e643f78059

author	Noel Grandin <noelgrandin@gmail.com>	2021-04-09 19:40:24 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2021-04-10 16:53:59 +0200
commit 44711d9eb53eb6247ebdb9293a3eb5e643f78059 (patch)
tree cdb23eee87489751e381ea8e5126ff9a3b4a5d64
parent 566e43d2129dd6c70bb718296ce66353e7ff824b (diff)
tdf#130326 related, speed up drawing

Bisected with: bibisect-linux64-7.2

Adding Cc: to Noel Grandin
Comment 2 Regina Henschel 2021-04-13 12:54:31 UTC
Created attachment 171160 [details]
Testdocument with group

It produces wrong placement of the elements in a group too. Open document, select the group via Navigator. Notice that the drag handles of the group are at a different place than the content of the group. The drag handles are on the correct place. The group content is drawn on wrong place.
Comment 3 Commit Notification 2021-04-17 14:49:21 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7ef7a23e7ee1f59cf719618991b3028456d84cf8

tdf#141675 Incorrect position of shape

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Xisco Faulí 2021-04-19 07:33:00 UTC
Verified in

Version: 7.2.0.0.alpha0+ / LibreOffice Community
Build ID: 9cff36d37df95bb9d2b552259c718459b2f81682
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

@Noel, thanks for taking care of it!
Comment 5 Xisco Faulí 2021-04-19 11:59:28 UTC
Hi Regina,
Any idea on how to test this issue? I've tried different approaches but I couldn't find the way it fails without the patch and passes with it
Comment 6 Regina Henschel 2021-04-19 13:47:38 UTC
The problem was a rendering failure. So I think you cannot test it via xShape. Perhaps you can test the pixel color in the area, where the shape should be. If you export the whole page (not a selection) to a png-image, the wrong rendering is exported. But I don't know how to do it. I have only seen something similar in SwUiWriterTest3, testTdf133477 by Tünde Tóth in https://cgit.freedesktop.org/libreoffice/core/commit/?id=52f8e0b6f09be0e8e8a068edef2017d45d5a1892
Comment 7 Xisco Faulí 2021-04-19 13:49:48 UTC
(In reply to Regina Henschel from comment #6)
> The problem was a rendering failure. So I think you cannot test it via
> xShape. Perhaps you can test the pixel color in the area, where the shape
> should be. If you export the whole page (not a selection) to a png-image,
> the wrong rendering is exported. But I don't know how to do it. I have only
> seen something similar in SwUiWriterTest3, testTdf133477 by Tünde Tóth in
> https://cgit.freedesktop.org/libreoffice/core/commit/
> ?id=52f8e0b6f09be0e8e8a068edef2017d45d5a1892

Yep, I also tried, same as exporting to PDF, unfortunately, no luck...