tdf#141675 Incorrect position of shape

This reverts
    commit 44711d9eb53eb6247ebdb9293a3eb5e643f78059
    tdf#130326 related, speed up drawing

because it causes a regression.

Change-Id: I19ea236b8541c1fe2557f43375bfef3ba555cfff